finally doen in woosh

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="shortcut icon" href="./src/logo.png" type="image/x-icon">
     <link rel="html" href="./event.html">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/mainEvent.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <script src="https://use.fontawesome.com/389659aaa2.js"></script>    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/615446c718.js" crossorigin="anonymous"></script>    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rimas catering</title>
   </head>
   <body>
@@ -21,11 +22,11 @@
         <input type="checkbox" id="menuToggle">
         <label for="menuToggle" class="menu-icon">&#9776;</label>
         <ul>
-          <li><a href="#hem">Hem</a></li>
-          <li><a href="#event">Event</a></li>
-          <li><a href="#gallerie">Gallerie</a></li>
-          <li><a href="#omoss">Om Oss</a></li>
-          <li><a href="#kontakt">Kontakt</a></li>
+          <li><a href="./index.html">Hem</a></li>
+          <li><a href="./evenemang.html">Event</a></li>
+          <li><a href="./gallerie.html">Gallerie</a></li>
+          <li><a href="./omoss.html">Om Oss</a></li>
+          <li><a href="./kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
 
@@ -73,8 +74,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <i  aria-hidden="true">FB</i>
-              </a>
+                <i class="fab fa-facebook-f" aria-hidden="true"></i>              </a>
             </li>
             <li>
               <a class="instagram" href="https://www.instagram.com/rimas.catering/">
@@ -82,8 +82,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <i  aria-hidden="true">IG</i>
-              </a>
+                <i class="fab fa-instagram" aria-hidden="true"></i>              </a>
             </li>
             <li>
               <a class="linkedin" href="https://www.linkedin.com/company/rimas-catering/about/">
@@ -91,8 +90,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <i  aria-hidden="true">LI</i>
-              </a>
+                <i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
             </li>
         </ul>
       </div>
@@ -104,6 +102,6 @@
         <p>© 2023 Rimas Catering</p>
       </footer>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./main.js" defer></script>
   </body>
 </html>
