--- a/gallerie.html
+++ b/gallerie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/into.css">
     <link rel="stylesheet" href="./css/gallerie.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -13,8 +14,20 @@
 <body>
 
     <header>
-        <a href="./index.html" class="fas fa-home"></a>
+        <img id="home-img" src="./src/logo2.png" alt="Our companys logo">
     </header>
+
+    <nav>
+        <input type="checkbox" id="menuToggle">
+        <label for="menuToggle" class="menu-icon">&#9776;</label>
+        <ul>
+          <li><a href="./index.html">Hem</a></li>
+          <li><a href="./evenemang.html">Event</a></li>
+          <li><a href="./gallerie.html">Gallerie</a></li>
+          <li><a href="./omoss.html">Om Oss</a></li>
+          <li><a href="./kontakt.html">Kontakt</a></li>
+        </ul>
+    </nav>
 
     <section class="intro">
         <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
@@ -161,6 +174,8 @@
             </div>
         </section> 
     </main>
+
+    <a href="#" class="top">UP &#8593;</a>
 
     <footer>
         <a href="./index.html">
