--- a/omoss.html
+++ b/omoss.html
@@ -4,16 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/into.css">
     <link rel="stylesheet" href="./css/mainOmoss.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Om oss</title>
 </head>
 <body>
     <header>
-        <a href="./index.html" class="fas fa-home"></a>
+        <img id="home-img" src="./src/logo2.png" alt="Our companys logo">
     </header>
+
+    <nav>
+        <input type="checkbox" id="menuToggle">
+        <label for="menuToggle" class="menu-icon">&#9776;</label>
+        <ul>
+          <li><a href="./index.html">Hem</a></li>
+          <li><a href="./evenemang.html">Event</a></li>
+          <li><a href="./gallerie.html">Gallerie</a></li>
+          <li><a href="./omoss.html">Om Oss</a></li>
+          <li><a href="./kontakt.html">Kontakt</a></li>
+        </ul>
+    </nav>
 
     <section class="intro">
         <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
