--- a/gallerie.html
+++ b/gallerie.html
@@ -175,7 +175,7 @@
         </section> 
     </main>
 
-    <a href="#" class="top">UP &#8593;</a>
+    <a href="#" class="top"> &#8593;</a>
 
     <footer>
         <a href="./index.html">
