--- a/omoss.html
+++ b/omoss.html
@@ -52,7 +52,7 @@
             </div>
             
             <div class="value-box">
-                <span class="value-item">Petighet</span>
+                <span class="value-item">Detaljfokuserad</span>
                 <p>Varje liten detalj räknas. Oavsett om det är placeringen av en garnering eller valet av en ingrediens, är vårt engagemang för detaljerna det som skiljer oss från mängden.</p>
             </div>
             
