--- a/event.html
+++ b/event.html
@@ -19,7 +19,7 @@
     <div class="container">
         <img class="kort" src="./src/WhatsApp2.jpeg" alt="">
         <div class="text">
-            <h4>Sparbankernas huvudmänsträtt</h4>
+            <h4>Sparbankernas huvudmänsträff</h4>
             <p class="textp">
                 Vid vårt bank-event bjöd vi på en festmåltid som fick alla att känna sig som en del av vår stora familj.
             </p>
