--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
         <a href="./index.html">
           <img src="./src/logo2.png" alt="Our companys logo">
         </a>
+
         <p>© 2023 Rimas Catering</p>
+
+        <!-- <h3>Kontakta oss</h3>
+        <a href="mailto:info@rimascatering.com">info@rimascatering.com</a> | 
+        <a href="tel:+0737608896">0737608896</a> -->
+
       </footer>
     </div>
     <script type="module" src="./main.js" defer></script>
