--- a/kontakt.html
+++ b/kontakt.html
@@ -59,10 +59,14 @@
             <label for="diet">Preferenser:</label>
             <select id="diet" name="diet" class="form__field" required>
                 <option value="vegetarian">Vegetariskt/Vegan</option>
-                <option value="meat">karnivor</option>
+                <option value="meat">Karnivor</option>
             </select>  
             
             <input type="submit" value="Skicka" name="" id="">  
+
+            <h3>Kontakta oss</h3>
+            <a href="mailto:info@rimascatering.com">info@rimascatering.com</a>  
+            <a href="tel:+0737608896">0737608896</a>
         </form>
     </main>
 
