--- a/kontakt.html
+++ b/kontakt.html
@@ -66,7 +66,7 @@
 
             <h2>Kontakt uppgifter</h2>
             <a style="color: black; font-size: 1.7rem; display: flex; margin-bottom: 1rem;" href="mailto:info@rimascatering.com">info@rimascatering.com</a>  
-            <a style="color: black; font-size: 1.6rem;" href="tel:+0737608896">Yosef Auwad-VD: 073-760 88 96</a>
+            <a style="color: black; font-size: 1.6rem;" href="tel:073 760 88 96">Yosef Auwad-VD: 073-760 88 96</a>
         </form>
     </main>
 
