--- a/kontakt.html
+++ b/kontakt.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/into.css">
-    <link rel="stylesheet" href="./css/mainKontakt.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/header.scss">
+    <link rel="stylesheet" href="./css/nav.scss">
+    <link rel="stylesheet" href="./css/into.scss">
+    <link rel="stylesheet" href="./css/mainKontakt.scss">
+    <link rel="stylesheet" href="./css/footer.scss">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <title>kontakt</title>
@@ -65,8 +65,8 @@
             <input type="submit" value="Skicka" name="" id="">  
 
             <h2>Kontakt uppgifter</h2>
-            <a style="color: black; font-size: 1.7rem; display: flex; margin-bottom: 1rem;" href="mailto:info@rimascatering.com">info@rimascatering.com</a>  
-            <a style="color: black; font-size: 1.6rem;" href="tel:073 760 88 96">Yosef Auwad-VD: 073-760 88 96</a>
+            <a href="mailto:info@rimascatering.com">info@rimascatering.com</a>  
+            <a href="tel:073 760 88 96">Yosef Owad-VD: 073-760 88 96</a>
         </form>
     </main>
 
