--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="html" href="./event.html">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/main.scss">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/mainEvent.css">
     <link rel="stylesheet" href="./css/footer.css">
     <script src="https://kit.fontawesome.com/615446c718.js" crossorigin="anonymous"></script>    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
