--- a/omoss.html
+++ b/omoss.html
@@ -22,9 +22,10 @@
         <ul>
           <li><a href="./index.html">Hem</a></li>
           <li><a href="./evenemang.html">Event</a></li>
-          <li><a href="./gallerie.html">Gallerie</a></li>
+          <li><a href="./service.html">Tjänster</a></li>
           <li><a href="./omoss.html">Om Oss</a></li>
           <li><a href="./kontakt.html">Kontakt</a></li>
+          <li><a href="./gallerie.html">Gallerie</a></li>
         </ul>
     </nav>
 
