--- a/service.html
+++ b/service.html
@@ -40,12 +40,12 @@
         <div class="values-and-missions">
             <div class="value-box">
                 <span class="value-item">Företagscatering</span>
-                <p>Tillhandahålla mat och dryck för företagsmöten, seminarier, konferenser och evenemang. Det kan inkludera allt från frukostmöten till lunchbufféer och cocktailmingel.</p>
+                <p>Tillhandahålla mat och dryck för företagsmöten, seminarier, konferenser och evenemang. Det kan inkludera allt från frukostmöten till lunchbufféer.</p>
             </div>
         
             <div class="value-box">
                 <span class="value-item">Buffécatering</span>
-                <p>Skapa och servera olika sorters bufféer, såsom brunchbufféer, salladsbufféer, eller tematiska bufféer med internationella rätter.</p>
+                <p>Skapa och servera olika sorters bufféer, såsom brunchbufféer, salladsbufféer, eller tematiska bufféer med autentiska rätter.</p>
             </div>
         
             <div class="value-box">
