--- a/gallerie.html
+++ b/gallerie.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/gallerie.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Gallerie</title>
+    <title>Galleri</title>
 </head>
 <body>
 
@@ -32,7 +32,7 @@
 
     <section class="intro">
         <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
-        <h1>Gallerie</h1>
+        <h1>Galleri</h1>
         <p class="head">Här får du se hur det ser ut!</p>
     </section>
 
