--- a/kontakt.html
+++ b/kontakt.html
@@ -33,7 +33,7 @@
     <section class="intro">
         <img class="mainImage" src="./src/splash.jpg" alt="some resturant imagery">
         <h1>Kontakta Oss</h1>
-        <p class="head">Missa inte chnasen att kontakta oss för en offert!</p>
+        <p class="head">Missa inte chansen att kontakta oss för en offert!</p>
     </section>
 
     <main class="kontakt" id="contact">
@@ -59,8 +59,8 @@
 
             <label for="diet">Preferenser:</label>
             <select id="diet" name="diet" class="form__field" required>
-                <option value="vegetarian">Vegetariskt/Vegan</option>
-                <option value="meat">Karnivor</option>
+                <option value="vegetarian">Vegetariskt/Utan kött</option>
+                <option value="meat">Med kött</option>
             </select>  
             
             <input type="submit" value="Skicka" name="" id="">  
