--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./src/logo.png" type="image/x-icon">
-    <link rel="html" href="./event.html">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -31,7 +30,7 @@
         </ul>
       </nav>
 
-      <main>
+      <main class="scroll-animation">
         <img src="./src/splash.jpg" alt="some resturant imagery">
         <h1>RIMAS CATERING</h1>
         <p class="ptag">
@@ -109,6 +108,7 @@
 
       </footer>
     </div>
+    <script src="test.js"></script>
     <script type="module" src="./main.js" defer></script>
   </body>
 </html>
