--- a/omoss.html
+++ b/omoss.html
@@ -74,5 +74,7 @@
         </a>
         <p>© 2023 Rimas Catering</p>
     </footer>
+
+    <script type="module" src="./main.js" defer></script>
 </body>
 </html>
